[package]
name = "bonnie-rs"
version = "0.1.0"
edition = "2021"
description = "PS1-style software rasterizer engine"
authors = ["ebonura"]

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.14"

[profile.release]
opt-level = 3
lto = true
