[package]
name = "bonnie-engine"
version = "0.1.0"
edition = "2021"
description = "PS1-style software rasterizer engine"
authors = ["ebonura"]

[[bin]]
name = "bonnie-engine"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
rustysynth = "1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.14"
cpal = "0.15"
webbrowser = "1.0"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
